[package]
name = "in-one-weekend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ppm_main"
path = "src/bin/ppm_main.rs"

[[bin]]
name = "final_render"
path = "src/bin/final_render_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}